# erased-serde

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: bench.rs
benches/twitter/: mod.rs
explanation/: Cargo.toml  main.rs
src/: any.rs  de.rs  error.rs  lib.rs  macros.rs  map.rs  private.rs  ser.rs
tests/: readme.rs
tests/crate/: Cargo.toml  lib.rs
tests/ui/: missing-supertrait.stderr
