[package]
name = "erased-serde"
version = "0.3.11"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Type-erased Serialize and Serializer traits"
repository = "https://github.com/dtolnay/erased-serde"
documentation = "https://github.com/dtolnay/erased-serde"
keywords = ["serde", "erasure"]
include = ["Cargo.toml", "src/**/*.rs", "LICENSE-*", "README.md"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0.63", default-features = false }

[dev-dependencies]
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"

[features]
# Note: at least one of "std" or "alloc" must be enabled.
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"] # requires Rust 1.36+
unstable-debug = []

[[test]]
name = "test"
path = "tests/readme.rs"

[badges]
travis-ci = { repository = "dtolnay/erased-serde" }

[workspace]
members = ["tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
