[package]
name = "erased-serde"
version = "0.3.24"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "rust-patterns", "no-std"]
description = "Type-erased Serialize and Serializer traits"
documentation = "https://docs.rs/erased-serde"
edition = "2018"
keywords = ["serde", "erasure"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/erased-serde"
rust-version = "1.31"

[dependencies]
serde = { version = "1.0.63", default-features = false }

[dev-dependencies]
rustversion = "1.0"
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[features]
# Note: at least one of "std" or "alloc" must be enabled.
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"] # requires Rust 1.36+
unstable-debug = []

[[test]]
name = "test"
path = "tests/readme.rs"

[workspace]
members = ["explanation", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
