[package]
name = "erased-serde"
version = "0.4.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "rust-patterns", "no-std"]
description = "Type-erased Serialize and Serializer traits"
documentation = "https://docs.rs/erased-serde"
edition = "2021"
exclude = ["benches"]
keywords = ["serde", "erasure"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/erased-serde"
rust-version = "1.61"

[dependencies]
serde = { version = "1.0.194", default-features = false }
typeid = "1"

[dev-dependencies]
rustversion = "1.0.13"
serde_cbor = "0.11.2"
serde_derive = "1.0.194"
serde_json = "1.0.99"
trybuild = { version = "1.0.83", features = ["diff"] }

[features]
# Note: at least one of "std" or "alloc" must be enabled.
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]
unstable-debug = []

[[test]]
name = "test"
path = "tests/readme.rs"

[workspace]
members = ["explanation", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
