[package]
name = "erased-serde-test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["erased-serde/std"]
alloc = ["erased-serde/alloc"]

[dependencies]
erased-serde = { path = "../..", default-features = false }
